move geophp dependency into composer.json.

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
   ],
   "support": {
     "issues": "https://www.drupal.org/project/issues/geophp"
+  },
+  "require": {
+    "phayes/geophp": "dev-master"
   }
 }
